--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ google_analytics: UA-74123332-3
 
 # Build settings
 markdown: kramdown
-
+paginate: 6
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: 4bbcd5 #80B3FF
